zellij-server/src/plugins/unit/snapshots/zellij_server__plugins__plugin_tests__before_close_plugin_event.snap
---
source: zellij-server/src/plugins/./unit/plugin_tests.rs
expression: "format!(\"{:#?}\", sent_instruction)"
---
HighlightAndUnhighlightPanes(
    [
        Terminal(
            1,
        ),
    ],
    [
        Plugin(
            1,
        ),
    ],
    1,
)
