zellij-server/src/plugins/unit/snapshots/zellij_server__plugins__plugin_tests__break_panes_to_tab_with_index_plugin_command.snap
---
source: zellij-server/src/plugins/./unit/plugin_tests.rs
expression: "format!(\"{:#?}\", screen_instruction)"
---
Some(
    BreakPanesToTabWithIndex {
        pane_ids: [
            Terminal(
                1,
            ),
            Plugin(
                2,
            ),
        ],
        tab_index: 2,
        should_change_focus_to_new_tab: true,
        client_id: 1,
        completion_tx: Some(
            NotificationEnd {
                channel: None,
                exit_status: None,
                unblock_condition: None,
                affected_pane_id: None,
                affected_tab_id: None,
                error_message: None,
            },
        ),
    },
)
