zellij-server/src/plugins/unit/snapshots/zellij_server__plugins__plugin_tests__can_subscribe_to_hd_events.snap
---
source: zellij-server/src/plugins/./unit/plugin_tests.rs
assertion_line: 387
expression: "format!(\"{:#?}\", plugin_bytes_event)"
---
Some(
    (
        0,
        1,
        "Rows: 20, Cols: 121, Received events: [InputReceived, FileSystem(Read([\"/host/test1\"]))]\n\r",
    ),
)
