zellij-server/src/plugins/unit/snapshots/zellij_server__plugins__plugin_tests__clear_screen_for_pane_id_plugin_command.snap
---
source: zellij-server/src/plugins/./unit/plugin_tests.rs
assertion_line: 7482
expression: "format!(\"{:#?}\", screen_instruction)"
---
Some(
    ClearScreenForPaneId(
        Terminal(
            2,
        ),
    ),
)
