zellij-server/src/plugins/unit/snapshots/zellij_server__plugins__plugin_tests__close_tab_with_index_plugin_command.snap
---
source: zellij-server/src/plugins/./unit/plugin_tests.rs
assertion_line: 8121
expression: "format!(\"{:#?}\", screen_instruction)"
---
Some(
    CloseTabWithIndex(
        2,
    ),
)
